--- a/Avalonia.AnimatedImage/Avalonia.AnimatedImage.csproj
+++ b/Avalonia.AnimatedImage/Avalonia.AnimatedImage.csproj
@@ -8,9 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="11.3.6" />
-        <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="3.0.1" />
-        <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
+        <PackageReference Include="Avalonia" Version="11.3.11" />
+        <PackageReference Include="Avalonia.Skia" Version="11.3.11" />
     </ItemGroup>
 
 </Project>
