--- a/.editorconfig
+++ b/.editorconfig
@@ -102,7 +102,7 @@ csharp_style_conditional_delegate_call = true:suggestion
 
 # 修饰符首选项
 csharp_prefer_static_local_function = true:suggestion
-csharp_preferred_modifier_order = public, private, protected, internal, static, extern, new, virtual, abstract, sealed, override, readonly, unsafe, volatile, async
+csharp_preferred_modifier_order = public, private, protected, internal, file, static, extern, new, virtual, abstract, sealed, override, readonly, unsafe, volatile, async
 
 # 代码块首选项
 csharp_prefer_braces = false:silent
